====================================================================================
Java Speedy Web Service client library version @@VERSION
====================================================================================

CHANGE LOG
----------
* Version 2.6.0
  - New properties "servingOfficeId", "coordX", "coordY", "coordType" are added in class ResultSite
  - New type ResultWorkingTime is introduced to specify office working time
  - New properties "maxParcelDimensions", "maxParcelWeight" and "workingTimeSchedule" are added in class ResultOfficeEx
  - New method getPickingDeliveryInfo() is available.
  
* Version 2.5.0
  - New field foreignParcelNumber added in ParamParcel and ParamParcelInfo
  - New structure ParamReturnServiceRequest is introduced to order return service requests
  - New structure ParamReturnShipmentRequest is introduced to order return shipment requests
  - New structure ParamFilterCountry is introduced to search and filter countries
  - New structure ResultCountry is introduced for country search request responses
  - New structure ResultState is introduced for state search request responses
  - New fields "siteName", "postCode", "countryId", "stateId", "frnAddressLine1", "frnAddressLine2" are added in structure ParamAddress
  - New fields "senderCountryId", "senderPostCode", "receiverCountryId", "receiverPostCode" are added in structure ParamCalculation
  - New fields "countryId" and "searchString" are added in structure ParamFilterSite
  - New fields "retShipmentRequest" of type ParamReturnShipmentRequest and "retServicesRequest" of type List<ParamReturnServiceRequest> is added in structure ParamPicking
  - New fields "countryId", "stateId", "frnAddressLine1" and "frnAddressLine2" are added in structure ResultAddress
  - New fields "countryId", "stateId", "frnAddressLine1" and "frnAddressLine2" are added in structure ResultAddressEx