@@ -23,6 +23,7 @@ import javax.xml.bind.annotation.XmlType;
  *         &lt;element name="siteId" type="{http://www.w3.org/2001/XMLSchema}long"/>
  *         &lt;element name="streetId" type="{http://www.w3.org/2001/XMLSchema}long" minOccurs="0"/>
  *         &lt;element name="streetNo" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
+ *         &lt;element name="returnCityCenterIfNoAddress" type="{http://www.w3.org/2001/XMLSchema}boolean" minOccurs="0"/>         
  *       &lt;/sequence>
  *     &lt;/restriction>
  *   &lt;/complexContent>
@@ -41,7 +42,8 @@ import javax.xml.bind.annotation.XmlType;
     "quarterId",
     "siteId",
     "streetId",
-    "streetNo"
+    "streetNo",
+    "returnCityCenterIfNoAddress"
 })
 public class ParamAddressSearch {
 
@@ -86,6 +88,13 @@ public class ParamAddressSearch {
      * MANDATORY: NO
      */
     protected String streetNo;
+    
+    /**
+     * Return city center if no address option flag
+     * MANDATORY: NO
+     * @since 2.6.0
+     */
+    private boolean returnCityCenterIfNoAddress; 
 
     /**
      * Gets the blockNo.
@@ -199,4 +208,21 @@ public class ParamAddressSearch {
         this.streetNo = streetNo;
     }
 
+    /**
+     * Get return city center if no address option flag
+     * @return return city center if no address option flag
+     * @since 2.6.0
+     */
+    public boolean isReturnCityCenterIfNoAddress() {
+		return returnCityCenterIfNoAddress;
+	}
+
+    /**
+     * Sets the return city center if no address option flag 
+     * @param returnCityCenterIfNoAddress Option flag value
+     * @since 2.6.0
+     */
+	public void setReturnCityCenterIfNoAddress(boolean returnCityCenterIfNoAddress) {
+		this.returnCityCenterIfNoAddress = returnCityCenterIfNoAddress;
+	}
 }
